# pyxfoil

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
pyxfoil/: __init__.py  xfoil.py  xfoilpolar.py  xfoilresult.py
scripts/: pyxfoil_low_re_plots.py  pyxfoil_path.py  pyxfoil_plots.py  pyxfoil_result_plots.py  pyxfoil_xtr_plots.py
src/pyxfoil/: __init__.py  xfoil.py  xfoilpolar.py  xfoilresult.py
